ditch custom recyclerview

--- a/app/src/main/res/layout/fragment_recent.xml
+++ b/app/src/main/res/layout/fragment_recent.xml
@@ -61,7 +61,7 @@
                 style="@style/clickableBorderlessBackground"/>
         </LinearLayout>
 
-        <com.toshi.view.custom.SkipDividersRecyclerView
+        <android.support.v7.widget.RecyclerView
             android:id="@+id/recents"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -69,4 +69,5 @@
             android:background="@color/sectioned_recyclerview_background"/>
 
     </LinearLayout>
+
 </android.support.design.widget.CoordinatorLayout>
