--- a/app/src/main/res/layout/list_item__search_header.xml
+++ b/app/src/main/res/layout/list_item__search_header.xml
@@ -50,7 +50,7 @@
 
     </LinearLayout>
 
-    <View
+    <android.support.v4.widget.Space
         style="@style/SectionedRecyclerViewSeparator" />
 
 </LinearLayout>
