--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -296,7 +296,7 @@
 
     <style name="SectionedRecyclerViewSeparator">
         <item name="android:layout_height">20dp</item>
-        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_width">0dp</item>
     </style>
 
 </resources>
