--- a/app/src/main/res/layout/fragment_recent.xml
+++ b/app/src/main/res/layout/fragment_recent.xml
@@ -46,7 +46,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 style="@style/Toolbar.TitleText"
-                android:text="@string/tab_recent"/>
+                android:text="@string/tab_chats"/>
 
             <android.support.v4.widget.Space
                 android:layout_width="0dp"
